# reachy_mini_ai

./: .env.example  .gitignore  AGENTS.md  README.md  README_zh.md  probe_s2s_realtime_audio.py  probe_s2s_realtime_text.py  pyproject.toml
docs/record/: 2026-05-10-195423.md  2026-05-10-203152.md  2026-05-10-232741.md  2026-05-12-231131.md  2026-05-24-121843.md  2026-07-01-223941.md  2026-07-02-232545.md  2026-07-03-104510.md  local_start.md
profiles/bored_teenager/: tools.txt
profiles/chess_coach/: tools.txt
profiles/default/: tools.txt
profiles/sorry_bro/: tools.txt
profiles/tedai/: tools.txt
services/hf_realtime_gateway/: .env.example  README.md  pyproject.toml
services/hf_realtime_gateway/src/reachy_mini_hf_realtime_gateway/: __init__.py  command_builder.py  config.py  healthcheck.py  launcher.py  speech_to_speech_runner.py  transcription_dedupe_patch.py
services/hf_realtime_gateway/tests/: conftest.py  test_command_builder.py  test_config.py  test_healthcheck.py  test_transcription_dedupe_patch.py
src/reachy_mini_conversation_app/: agent_observability.py  aliyun_realtime.py  ark_live.py  base_realtime.py  config.py  console.py  gemini_live.py  headless_personality_ui.py  main.py  (+8 more)
tests/: test_agent_observability.py  test_aliyun_realtime.py  test_ark_live.py  test_config_name_collisions.py  test_console.py  test_external_loading.py  test_gemini_live.py  test_huggingface_realtime.py  test_memory.py  test_openai_realtime.py  test_pipeline_realtime.py  test_probe_s2s_realtime_audio.py  test_profile_paths.py  test_utils.py  test_virtual_robot.py
(+33 files in other folders)
